Fix UTF-8 encoding for templates

--- a/templates/jagd/eintrag_confirm_delete.html
+++ b/templates/jagd/eintrag_confirm_delete.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load task_filters %}
+
 
 {% block title %}Eintrag löschen - Jagdtagebuch{% endblock %}
 
@@ -52,7 +52,7 @@
                     <form method="post">
                         {% csrf_token %}
                         <div class="d-flex justify-content-center gap-3">
-                            <a href="{% url 'jagd_eintrag_detail' eintrag.pk %}" class="btn btn-outline-secondary px-4">
+                            <a href="{% url 'eintrag_detail' eintrag.pk %}" class="btn btn-outline-secondary px-4">
                                 <i class="bi bi-arrow-left me-1"></i>Abbrechen
                             </a>
                             <button type="submit" class="btn btn-danger px-4">
