--- a/templates/jagd/eintrag_detail.html
+++ b/templates/jagd/eintrag_detail.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load task_filters %}
+
 
 {% block title %}{{ eintrag.get_wildart_display }} - Jagdtagebuch{% endblock %}
 
@@ -165,14 +165,14 @@
 
             <!-- Aktionen -->
             <div class="d-flex justify-content-between">
-                <a href="{% url 'jagd_dashboard' %}" class="btn btn-outline-secondary">
+                <a href="{% url 'dashboard' %}" class="btn btn-outline-secondary">
                     <i class="bi bi-arrow-left me-1"></i>Zurück
                 </a>
                 <div>
-                    <a href="{% url 'jagd_eintrag_bearbeiten' eintrag.pk %}" class="btn btn-outline-primary me-2">
+                    <a href="{% url 'eintrag_bearbeiten' eintrag.pk %}" class="btn btn-outline-primary me-2">
                         <i class="bi bi-pencil me-1"></i>Bearbeiten
                     </a>
-                    <a href="{% url 'jagd_eintrag_loeschen' eintrag.pk %}" class="btn btn-outline-danger">
+                    <a href="{% url 'eintrag_loeschen' eintrag.pk %}" class="btn btn-outline-danger">
                         <i class="bi bi-trash me-1"></i>Löschen
                     </a>
                 </div>
