--- a/templates/base.html
+++ b/templates/base.html
@@ -32,9 +32,35 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link text-white" href="{% url 'liste_detailliert' %}">
+                            <i class="bi bi-table me-1"></i>Detailliert
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-white" href="{% url 'eintrag_neu' %}">
                             <i class="bi bi-plus-lg me-1"></i>Neuer Eintrag
                         </a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown">
+                            <i class="bi bi-house me-1"></i>Hochsitze
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{% url 'hochsitz_liste' %}"><i class="bi bi-house me-2"></i>Alle Hochsitze</a></li>
+                            <li><a class="dropdown-item" href="{% url 'revier_liste' %}"><i class="bi bi-geo-alt me-2"></i>Reviere</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="{% url 'hochsitz_neu' %}"><i class="bi bi-plus-lg me-2"></i>Neuer Hochsitz</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown">
+                            <i class="bi bi-bullseye me-1"></i>Waffen
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{% url 'waffe_liste' %}"><i class="bi bi-bullseye me-2"></i>Alle Waffen</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="{% url 'waffe_neu' %}"><i class="bi bi-plus-lg me-2"></i>Neue Waffe</a></li>
+                        </ul>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
@@ -43,6 +69,10 @@
                             <i class="bi bi-person-circle me-1"></i>{{ user.username }}
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
+                            {% if user.is_superuser %}
+                            <li><a class="dropdown-item" href="{% url 'benutzer_liste' %}"><i class="bi bi-people me-2"></i>Benutzerverwaltung</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            {% endif %}
                             <li><a class="dropdown-item" href="{% url 'password_change' %}"><i class="bi bi-key me-2"></i>Passwort aendern</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="{% url 'logout' %}"><i class="bi bi-box-arrow-right me-2"></i>Abmelden</a></li>
@@ -55,7 +85,7 @@
     {% endif %}
 
     <main class="py-4">
-        <div class="container">
+        {% block container_start %}<div class="container">{% endblock %}
             {% if messages %}
             {% for message in messages %}
             <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
@@ -65,7 +95,7 @@
             {% endfor %}
             {% endif %}
             {% block content %}{% endblock %}
-        </div>
+        {% block container_end %}</div>{% endblock %}
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
